--- a/util/build.gradle
+++ b/util/build.gradle
@@ -16,6 +16,7 @@ ext {
 }
 
 dependencies {
+	implementation project(':api')
 	implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
