--- a/microservices/product-service/src/main/resources/application.yml
+++ b/microservices/product-service/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+# perfil por defecto o local
 server:
   port: 7001
 
@@ -5,3 +6,13 @@ logging:
   level:
     root: INFO
     ar.admiral: DEBUG
+
+# agregamos un nuevo perfil para que corra con docker
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+
+server:
+  port: 8080
