--- a/microservices/product-composite-service/src/main/resources/application.yml
+++ b/microservices/product-composite-service/src/main/resources/application.yml
@@ -11,3 +11,19 @@ app:
   review-service:
     host: localhost
     port: 7003
+
+# tres rayitas para correrlo con docker
+---
+spring.config.activate.on-profile: docker
+server.port: 8080
+# indicamos donde corren lo otros microservicios
+app:
+  product-service:
+    host: product
+    port: 8080
+  recommendation-service:
+    host: recommendation
+    port: 8080
+  review-service:
+    host: review
+    port: 8080
